--- a/TTSB-wallet/src/main/resources/application.yml
+++ b/TTSB-wallet/src/main/resources/application.yml
@@ -1,69 +1,3 @@
 spring:
- main:
-    allow-bean-definition-overriding: true
- thymeleaf:
-    cache: false
- jpa:
-    open-in-view: true
- application:
-    name: ttsb-wallet
- output:
-    ansi:
-      enabled: ALWAYS
- http:
-    encoding:
-      enabled: true
-      force: true
-      charset: UTF-8
- servlet:
-    multipart:
-      enabled: true
-      maxFileSize: 10MB
-      maxRequestSize: 10MB
- resources:
-    add-mappings: true
- mvc:
-    favicon:
-      enabled: false
-    throw-exception-if-no-handler-found: true
- mail:  
-      host: smtp.qq.com
-      port: 465
-      username: hohahe@qq.com
-      password: qkrnqwtapfvdbgff
-      default-encoding: UTF-8
-      validate: false
-      
- security:
-    oauth2:
-      resourceserver:
-        jwt:
-          jwk-set-uri: "http://servicechain.newtouch.com/api/authorization/.well-known/jwks.json"
- 
-server:
- port: 8080
- servlet:
-    application-display-name: ttsb
-    context-path: /wallet/
- tomcat:
-  uri-encoding: UTF-8
-  basedir: tomcat
-logging:
-  config: classpath:logback.xml
-
-blockchain:
-  url: http://192.168.0.12:8080
-  token-address: "0x9dc29BeAE6792acbd7D30ce49F964e78347043aD"
-#认证服务器相关url
-authentication:
-  server:
-    url:
-      login: "http://servicechain.newtouch.com/#/Login"
-      account: "http://servicechain.newtouch.com/api/account/user/getAccountAddress" 
-#db      
-ttsb-datasource:
-  url: jdbc:mysql://mysql.service.consul:3306/ttsb?useUnicode=true&characterEncoding=utf-8&useSSL=false
-  username: blockchain
-  password: 9NoC96bBadMECa87blockchain
-  driver: com.mysql.jdbc.Driver
- 
+  profiles:
+    active: dev
