--- a/easypoi/pom.xml
+++ b/easypoi/pom.xml
@@ -41,6 +41,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>cn.afterturn</groupId>
 			<artifactId>easypoi-base</artifactId>
@@ -55,6 +61,12 @@
 			<groupId>cn.afterturn</groupId>
 			<artifactId>easypoi-annotation</artifactId>
 			<version>3.0.3</version>
+		</dependency>
+		<!-- google验证码 -->
+		<dependency>
+			<groupId>com.github.penggle</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 	</dependencies>
 
