--- a/easypoi/pom.xml
+++ b/easypoi/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>kaptcha</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+		<dependency>
+		    <groupId>cn.hutool</groupId>
+		    <artifactId>hutool-all</artifactId>
+		    <version>5.3.5</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
